crates/akari_cpp_ext/src/binding.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod root {
    #[allow(unused_imports)]
    use self::super::root;
    pub mod std {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod __gnu_cxx {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    #[repr(C)]
    #[derive(Debug, Copy, Clone)]
    pub struct Mesh {
        _unused: [u8; 0],
    }
    #[repr(C)]
    #[derive(Debug, Copy, Clone)]
    pub struct MLoopTri {
        _unused: [u8; 0],
    }
    pub type ParallelForFn = ::std::option::Option<
        unsafe extern "C" fn(arg1: *const ::std::os::raw::c_void, arg2: usize),
    >;
    #[repr(C)]
    #[derive(Debug, Copy, Clone)]
    pub struct ParallelForContext {
        pub _parallel_for: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: usize,
                arg2: root::ParallelForFn,
                arg3: *const ::std::os::raw::c_void,
            ),
        >,
    }
    #[allow(clippy::unnecessary_operation, clippy::identity_op)]
    const _: () = {
        ["Size of ParallelForContext"][::std::mem::size_of::<ParallelForContext>() - 8usize];
        ["Alignment of ParallelForContext"][::std::mem::align_of::<ParallelForContext>() - 8usize];
        ["Offset of field: ParallelForContext::_parallel_for"]
            [::std::mem::offset_of!(ParallelForContext, _parallel_for) - 0usize];
    };
    pub mod blender_util {
        #[allow(unused_imports)]
        use self::super::super::root;
        unsafe extern "C" {
            pub fn get_mesh_triangle_indices(
                ctx: *const root::ParallelForContext,
                mesh: *const root::Mesh,
                tri: *const root::MLoopTri,
                count: usize,
                out: *mut u32,
            );
        }
        unsafe extern "C" {
            pub fn get_mesh_tangents(
                ctx: *const root::ParallelForContext,
                mesh: *const root::Mesh,
                tri: *const root::MLoopTri,
                count: usize,
                out: *mut f32,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn get_mesh_split_normals(
                ctx: *const root::ParallelForContext,
                mesh: *const root::Mesh,
                tri: *const root::MLoopTri,
                count: usize,
                out: *mut f32,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn get_mesh_material_indices(
                ctx: *const root::ParallelForContext,
                mesh: *const root::Mesh,
                tri: *const root::MLoopTri,
                count: usize,
                out: *mut u32,
            );
        }
    }
    pub mod spectral {
        #[allow(unused_imports)]
        use self::super::super::root;
        unsafe extern "C" {
            pub fn rgb2spec_opt(
                argc: ::std::os::raw::c_int,
                argv: *const *const ::std::os::raw::c_char,
            ) -> ::std::os::raw::c_int;
        }
    }
}
